[gd_scene load_steps=28 format=3 uid="uid://5u6x2xd2p54x"]

[ext_resource type="Script" path="res://Dino/dino.gd" id="1_0e0h1"]
[ext_resource type="Texture2D" uid="uid://c1srgngkr1g63" path="res://Dino/Assets/Sprites/DinoSprites - mort.png" id="1_h8mq3"]
[ext_resource type="AudioStream" uid="uid://brbwua1j3tqyu" path="res://Dino/Assets/Audio/jump.wav" id="2_spbba"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mk2e0"]
atlas = ExtResource("1_h8mq3")
region = Rect2(408, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlvj0"]
atlas = ExtResource("1_h8mq3")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2ekt"]
atlas = ExtResource("1_h8mq3")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcmry"]
atlas = ExtResource("1_h8mq3")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfhje"]
atlas = ExtResource("1_h8mq3")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j4cp"]
atlas = ExtResource("1_h8mq3")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a1gs"]
atlas = ExtResource("1_h8mq3")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1kdd"]
atlas = ExtResource("1_h8mq3")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx0au"]
atlas = ExtResource("1_h8mq3")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l6xe"]
atlas = ExtResource("1_h8mq3")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5moc5"]
atlas = ExtResource("1_h8mq3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7yli"]
atlas = ExtResource("1_h8mq3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_emqdi"]
atlas = ExtResource("1_h8mq3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b84d6"]
atlas = ExtResource("1_h8mq3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s87a1"]
atlas = ExtResource("1_h8mq3")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdn0e"]
atlas = ExtResource("1_h8mq3")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkfga"]
atlas = ExtResource("1_h8mq3")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yho4a"]
atlas = ExtResource("1_h8mq3")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qewkb"]
atlas = ExtResource("1_h8mq3")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_myx65"]
atlas = ExtResource("1_h8mq3")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g00n4"]
atlas = ExtResource("1_h8mq3")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qs6k8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk2e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlvj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2ekt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcmry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfhje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j4cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a1gs")
}],
"loop": true,
"name": &"duck",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1kdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx0au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l6xe")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5moc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7yli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emqdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b84d6")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s87a1")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdn0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkfga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yho4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qewkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myx65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g00n4")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgg2l"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vv50"]
size = Vector2(10, 13)

[node name="Dino" type="CharacterBody2D"]
z_index = 1
scale = Vector2(8, 8)
script = ExtResource("1_0e0h1")

[node name="DinoSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qs6k8")
animation = &"jump"
autoplay = "idle"
frame_progress = 0.529455

[node name="RunCol" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_mgg2l")

[node name="DuckCol" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_4vv50")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_spbba")
volume_db = -25.0
